# crypto-quant

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_REVIEW.md  Dockerfile  README.md  buildozer.spec  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build-apk.yml
android_app/: README.md  build.gradle.kts  requirements.txt  settings.gradle.kts
android_app/app/: build.gradle.kts  proguard-rules.pro
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/python/: crypto_quant_bridge.py
android_app/app/src/main/python/crypto_quant/: config.py  crypto_quant_bridge.py  evolution_engine.py  evolution_tools.py  main.py  requirements.txt
android_app/app/src/main/res/drawable/: ic_launcher_foreground.xml
crypto_quant/: __init__.py  check_integrity.py  config.py  config.yaml  evolution_core.py  evolution_engine.py  evolution_v3.py  logging_config.py  main.py  requirements.txt  run_backtest_final.py  version.py
crypto_quant/ai/: agents.py  orderbook.py  predictor.py  rl_env.py  workflow.py
crypto_quant/backtest/: __init__.py  engine.py  metrics.py
crypto_quant/data/: collector.py  store.py
crypto_quant/execution/: alert_engine.py  client.py  live_trader.py  notifier.py  scheduler.py  simulator.py
crypto_quant/risk/: manager.py
crypto_quant/strategy/: __init__.py  ai_strategy.py  base.py  bollinger.py  dual_ma.py  features.py  funding_arb.py  grid.py  macd.py  manager.py  mean_reversion_v2.py  meta_strategy.py  mtf_strategy.py  multi_agent_strategy.py  portfolio.py  regime_analyzer.py  rsi_mean_reversion.py  smart_follower.py  smart_meta.py  supertrend.py  turtle.py
crypto_quant/strategy/custom/: __init__.py
crypto_quant/tests/: test_backtest.py  test_risk.py
crypto_quant/web/: alerts.py  data_admin_routes.py  evolution_routes.py  exchange_routes.py  routes.py  strategy_admin_routes.py
crypto_quant/web/static/: index.html  manifest.json  welcome.html
crypto_quant/web/static/css/: style.css
crypto_quant/web/static/js/: app.js  backtest.js  dashboard.js  error_handler.js  strategy.js  strategy_guide.js  strategy_store.js
(+71 files in other folders)
