[project]
name = "crypto-quant"
version = "12.0.0"
description = "加密货币量化交易系统 — 基于 Binance/OKX 的 Web 量化交易平台"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["crypto", "quantitative-trading", "bitcoin", "binance", "okx", "backtesting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.17.0",
    "pydantic>=2.0.0",
    "websockets>=10.0",
    "websocket-client>=1.4.0",
    "pyyaml>=5.4.0",
    "ccxt>=4.0.0",
    "requests>=2.25.0",
    "aiofiles>=23.0.0",
    "scikit-learn>=1.3.0",
    "fpdf2>=2.7.0",
    "plyer>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/wxl258/crypto-quant"
Repository = "https://github.com/wxl258/crypto-quant"
Issues = "https://github.com/wxl258/crypto-quant/issues"

# ── Ruff 配置 ──
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top (dynamic path insertion)
]

[tool.ruff.lint.isort]
known-first-party = ["crypto_quant"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pytest 配置 ──
[tool.pytest.ini_options]
testpaths = ["crypto_quant/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
